<resources>
    <string name="album_art_desc">Album art</string>
    <string name="album_name">Album Name</string>
    <string name="app_name">Fuze Music</string>
    <string name="artist_name">Artist Name</string>
    <string name="back_button_desc">Back button</string>
    <string name="fragment_albums">Albums fragment</string>
    <string name="fragment_artists">Artists fragment</string>
    <string name="fragment_for_you">For You fragment</string>
    <string name="fragment_songs">Songs fragment</string>
    <string name="history">History</string>
    <string name="last_added">Last Added</string>
    <string name="more_button_desc">More options</string>
    <string name="music">Music</string>
    <string name="music_queue_button_desc">Music Queue</string>
    <string name="play_pause_button_desc">Play/Pause</string>
    <string name="playing_artist_name">Artist Name</string>
    <string name="queue">Queue</string>
    <string name="repeat_button_desc">Repeat</string>
    <string name="search_button_desc">Search</string>
    <string name="shuffle">Shuffle</string>
    <string name="shuffle_button_desc">Shuffle</string>
    <string name="skip_next_button_desc">Next</string>
    <string name="skip_previous_button_desc">Previous</string>
    <string name="song_end">4:00</string>
    <string name="song_name">Song Name</string>
    <string name="song_start">0:00</string>
    <string name="title">Title</string>
    <string name="welcome_to_fuze">Welcome to Fuze</string>
</resources>